-
Bug
-
Resolution: Fixed
-
P2
-
17, 21, 22, 23
-
b21
-
aarch64
-
linux
-
Verified
Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
---|---|---|---|---|---|---|
JDK-8333736 | 23.0.2 | Coleen Phillimore | P2 | Closed | Fixed | b04 |
JDK-8342908 | 21.0.7-oracle | Coleen Phillimore | P2 | Closed | Fixed | b01 |
JDK-8346630 | 21.0.7 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
JDK-8342916 | 17.0.15-oracle | Coleen Phillimore | P2 | Closed | Fixed | b01 |
JDK-8346747 | 17.0.15 | Goetz Lindenmaier | P2 | Resolved | Fixed | b01 |
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/ent-user/jdk_src/src/hotspot/cpu/aarch64/frame_aarch64.cpp:348), pid=1299863, tid=1299905
# assert((intptr_t*) result < fp()) failed: monitor end should be strictly below the frame pointer
#
# JRE version: OpenJDK Runtime Environment (22.0) (fastdebug build 22-internal-git-57bc96e5c)
# Java VM: OpenJDK 64-Bit Server VM (fastdebug 22-internal-git-57bc96e5c, mixed mode, compressed oops, compressed class ptrs, g1 gc, linux-aarch64)
# Problematic frame:
# V [libjvm.so+0xb43454] frame::interpreter_frame_monitor_end() const+0xf4
#
The full crash dump is attached.
I've also seen this assertion fail once or twice with the same test:
# assert(has_last_Java_frame()) failed: must have last_Java_sp() when suspended
- backported by
-
JDK-8346630 runtime/handshake/HandshakeDirectTest.java causes "monitor end should be strictly below the frame pointer" assertion failure on AArch64
-
- Resolved
-
-
JDK-8346747 runtime/handshake/HandshakeDirectTest.java causes "monitor end should be strictly below the frame pointer" assertion failure on AArch64
-
- Resolved
-
-
JDK-8333736 runtime/handshake/HandshakeDirectTest.java causes "monitor end should be strictly below the frame pointer" assertion failure on AArch64
-
- Closed
-
-
JDK-8342908 runtime/handshake/HandshakeDirectTest.java causes "monitor end should be strictly below the frame pointer" assertion failure on AArch64
-
- Closed
-
-
JDK-8342916 runtime/handshake/HandshakeDirectTest.java causes "monitor end should be strictly below the frame pointer" assertion failure on AArch64
-
- Closed
-
- duplicates
-
JDK-8338561 Test runtime/Thread/StopAtExit.java intermittent crash JavaFrameAnchor::make_walkable
-
- Closed
-
- relates to
-
JDK-8341544 Restore fence() in Mutex
-
- Resolved
-
-
JDK-8253611 AArch64: Concurrency problems in JavaFrameAnchor
-
- Closed
-
-
JDK-8347301 runtime/handshake/HandshakeDirectTest.java test failing JDK 17, CentOS Aarch64
-
- Closed
-
- links to
-
Commit(master) openjdk/jdk17u-dev/247815b2
-
Commit(master) openjdk/jdk21u-dev/e5433159
-
Commit(master) openjdk/jdk23u/eacb0fb0
-
Commit(master) openjdk/jdk/83e9e482
-
Review(master) openjdk/jdk17u-dev/3140
-
Review(master) openjdk/jdk21u-dev/1260
-
Review(master) openjdk/jdk23u/201
-
Review(master) openjdk/jdk/21295